Small fixes in the gradle configs